--- a/laborator-9/src/main/webapp/resources/css/user.css
+++ b/laborator-9/src/main/webapp/resources/css/user.css
@@ -1,6 +1,6 @@
 /* ------ user.xhtml ------ */
 
-#ui-button-add {
+#ui-button-add, #ui-button-add-admin {
     background-color: #333;
     color: white;
     padding: 10px;
@@ -10,7 +10,7 @@
     cursor: pointer;
 }
 
-#ui-button-add:hover {
+#ui-button-add, #ui-button-add-admin:hover {
     background-color: #1f0d3a;
 }
 
@@ -44,5 +44,19 @@
 }
 
 .ui-dialog-add-preference .ui-button-save:hover {
+    background-color: #1f0d3a;
+}
+
+.custom-button {
+    background-color: #333;
+    color: white;
+    padding: 10px;
+    margin-right: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.custom-button:hover {
     background-color: #1f0d3a;
 }
